// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatherProtectedInput.vue should change input type when show password is clicked 1`] = `
<div
  data-v-074d4a86=""
>
  <div
    class="feather-input-wrapper-container feather-input-content"
    data-v-074d4a86=""
    data-v-9ec5a652=""
  >
    <fieldset
      aria-hidden="true"
      class="feather-input-border"
      data-v-9ec5a652=""
    >
      <legend
        data-v-9ec5a652=""
      >
        TEST
      </legend>
    </fieldset>
    <label
      class="feather-input-label"
      data-ref-id="feather-form-element-label"
      data-v-9ec5a652=""
      for="feather-input-label"
    >
      TEST
    </label>
    <div
      class="feather-input-wrapper"
      data-v-9ec5a652=""
    >
      <div
        class="prefix"
        data-v-9ec5a652=""
      >
        
        
      </div>
      
      <input
        aria-describedby="feather-input-description"
        aria-disabled="false"
        aria-invalid="false"
        class="feather-input"
        data-ref-id="feather-input"
        data-v-074d4a86=""
        id="feather-input-label"
        maxlength="false"
        name="feather-input-label"
        type="input"
      />
      
      <div
        class="post"
        data-v-9ec5a652=""
      >
        <!---->
        <!---->
        
        
        <a
          class="password-icon hide-when-disabled"
          data-ref-id="feather-input-password-icon"
          href="#"
          title="Hide password"
        >
          <svg
            aria-hidden="true"
            class="feather-icon"
            data-v-0aa06a12=""
            focusable="false"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.71,2.29A1,1,0,0,0,2.29,3.71l18,18a1,1,0,0,0,1.42,0,1,1,0,0,0,0-1.42Z"
            />
            <path
              d="M13.59,17.83A8.41,8.41,0,0,1,12,18a9.77,9.77,0,0,1-8.92-6A10.31,10.31,0,0,1,4.94,9.18L3.52,7.76a12.38,12.38,0,0,0-2.45,3.87,1,1,0,0,0,0,.74A11.79,11.79,0,0,0,12,20a11.5,11.5,0,0,0,3.27-.49Z"
            />
            <path
              d="M10.41,6.17A8.41,8.41,0,0,1,12,6a9.77,9.77,0,0,1,8.92,6,10.31,10.31,0,0,1-1.86,2.82l1.42,1.42a12.38,12.38,0,0,0,2.45-3.87,1,1,0,0,0,0-.74A11.79,11.79,0,0,0,12,4a11.5,11.5,0,0,0-3.27.49Z"
            />
          </svg>
        </a>
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    data-v-074d4a86=""
    data-v-11692aa4=""
    id="feather-input-description"
    style="display: none;"
  >
    <!---->
    <!---->
    
    
  </div>
</div>
`;

exports[`FeatherProtectedInput.vue should render with show password icon by default 1`] = `
<div
  data-v-074d4a86=""
>
  <div
    class="feather-input-wrapper-container feather-input-content"
    data-v-074d4a86=""
    data-v-9ec5a652=""
  >
    <fieldset
      aria-hidden="true"
      class="feather-input-border"
      data-v-9ec5a652=""
    >
      <legend
        data-v-9ec5a652=""
      >
        TEST
      </legend>
    </fieldset>
    <label
      class="feather-input-label"
      data-ref-id="feather-form-element-label"
      data-v-9ec5a652=""
      for="feather-input-label"
    >
      TEST
    </label>
    <div
      class="feather-input-wrapper"
      data-v-9ec5a652=""
    >
      <div
        class="prefix"
        data-v-9ec5a652=""
      >
        
        
      </div>
      
      <input
        aria-describedby="feather-input-description"
        aria-disabled="false"
        aria-invalid="false"
        class="feather-input"
        data-ref-id="feather-input"
        data-v-074d4a86=""
        id="feather-input-label"
        maxlength="false"
        name="feather-input-label"
        type="password"
      />
      
      <div
        class="post"
        data-v-9ec5a652=""
      >
        <!---->
        <!---->
        
        
        <a
          class="password-icon hide-when-disabled"
          data-ref-id="feather-input-password-icon"
          href="#"
          title="Show password"
        >
          <svg
            aria-hidden="true"
            class="feather-icon"
            data-v-0aa06a12=""
            focusable="false"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22.93,11.63A11.79,11.79,0,0,0,12,4,11.79,11.79,0,0,0,1.07,11.63a1,1,0,0,0,0,.74A11.79,11.79,0,0,0,12,20a11.79,11.79,0,0,0,10.93-7.63A1,1,0,0,0,22.93,11.63ZM12,18a9.77,9.77,0,0,1-8.92-6A9.77,9.77,0,0,1,12,6a9.77,9.77,0,0,1,8.92,6A9.77,9.77,0,0,1,12,18Z"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
          </svg>
        </a>
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    data-v-074d4a86=""
    data-v-11692aa4=""
    id="feather-input-description"
    style="display: none;"
  >
    <!---->
    <!---->
    
    
  </div>
</div>
`;
